# ClaudeBackTester

./: .env.example  .gitignore  CLAUDE.md  CURRENT_TASK.md  DEPLOY.bat  PRD.md  PROGRESS.md  STATUS.bat  STOP.bat  pyproject.toml  requirements.txt
.claude/commands/: deploy.md  new-strategy.md  review.md  run-backtest.md  verify-trades.md
Research/: mql5_catalogue.json
Research/briefs/: candidate-selection-redesign-report.md  candidate_selection_codex_response.md  candidate_selection_redesign.md  optimizer-engine-upgrade-report.md  optimizer_engine_upgrade.md  pipeline-redesign-diagram.mmd  staged-vs-joint-optimization-report.md  staged_vs_joint_optimization.md
backtester/: __init__.py
backtester/broker/: __init__.py  mt5.py  mt5_orders.py
backtester/cli/: main.py
backtester/core/: __init__.py  dtypes.py  encoding.py  engine.py  jit_loop.py  metrics.py  numba_setup.py  rust_loop.py  telemetry.py
backtester/dashboard/: server.py
backtester/data/: __init__.py  downloader.py  splitting.py  timeframes.py  validation.py
backtester/live/: __init__.py  config.py  position_manager.py  state.py  trader.py  types.py
backtester/optimizer/: __init__.py  archive.py  config.py  cv_objective.py  prefilter.py  progress.py  ranking.py  run.py  (+2 more)
dashboard/: package-lock.json  package.json  vite.config.ts
docs/: architecture.md  e2e-audit-report.md  tooling-setup.md
results/: batch_summary.txt
rust/: Cargo.toml  build.sh  pyproject.toml
scripts/: batch_run.py  check_trader.bat  crawl_mql5_articles.py  deploy_vps.bat  download_all.py  download_overnight.py  download_retry.py  ensure_deps.py  full_run.py  live_trade.py  rust_accuracy_check.py  rust_m1_stress_test.py  rust_vs_numba_benchmark.py  scrape_mql5_article.py  smoke_test_strategy.py  start_all.py  status_all.py  stop_all.py  stop_trader.bat  test_live_data.py  triage_articles.py  verify_trades.py
tests/: conftest.py  test_causality.py  test_confidence.py  test_cpcv.py  test_cv_objective.py  test_data.py  test_ema_crossover.py  test_encoding.py  test_engine.py  test_jit_loop.py  test_live_state.py  test_metrics.py  test_monte_carlo.py  test_optimizer.py  test_param_widening.py  test_pipeline_runner.py  test_pipeline_types.py  test_position_manager.py  test_regime.py  test_risk_manager.py  test_rust_parity.py  test_smoke.py  test_smoke_cmaes.py  test_stability.py  test_strategies.py  test_telemetry_parity.py  test_walk_forward.py
(+147 files in other folders)
