[project]
name = "backtester"
version = "0.1.0"
description = "Automated Forex Trading System — discover, validate, deploy, and monitor trading strategies"
requires-python = ">=3.12"
dependencies = [
    # Core computation
    "numpy>=1.26",
    "numba>=0.60",
    "tbb>=2021.0",

    # Data storage and manipulation
    "pandas>=2.2",
    "pyarrow>=15.0",

    # Optimization
    "optuna>=3.6",
    "scipy>=1.12",

    # Broker API (IC Markets via MT5)
    "MetaTrader5>=5.0.45",
    "requests>=2.31",

    # Historical data (Dukascopy)
    "dukascopy-python>=0.3",

    # CLI
    "click>=8.1",

    # Notifications
    "python-telegram-bot>=21.0",

    # Logging
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
dashboard = [
    # Dashboard backend
    "fastapi>=0.111",
    "uvicorn>=0.29",
]

[project.scripts]
bt = "backtester.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
